change styles for buttons and btn-container to prevent overflow

--- a/src/components/showanswer.css
+++ b/src/components/showanswer.css
@@ -5,16 +5,6 @@
   height: 100%;
 }
 
-.wrapper {
-  width: 100%;
-  max-width: 700px;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .currentQuestionTrack {
   font-size: 24px;
   color: white;
@@ -25,23 +15,19 @@
 .btn-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 15px;
-  margin: 20px 0;
+  margin: 2% 0;
   width: 100%;
 }
 
 .currentQuestion {
-  width: 100%;
-  max-width: 500px;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 5px;
-  font-size: 25px;
+  font-size: 24px;
   color: #d98b88;
-  margin-top: 2%;
+  margin: 2% 2% 3% 2%;
 }
 
 button {
@@ -52,6 +38,16 @@ button {
   margin: 1%;
   text-align: justify;
   cursor: pointer;
+}
+
+button:nth-child(1),
+button:nth-child(3) {
+margin: 0 3% 6% 10%;
+}
+
+button:nth-child(2),
+button:nth-child(4) {
+margin: 0 10% 6% 3%;
 }
 
 .next-btn {
@@ -65,9 +61,7 @@ button {
   text-decoration: none;
   font-size: 20px;
   font-weight: bold;
-  margin: 0px 4px;
   cursor: pointer;
-  margin-bottom: 20px;
   font-family: "Londrina Solid", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
